# mysterbox-vault

./: .gitignore  App.tsx  README.md  README_CN.md  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  types.ts
components/: Button.tsx  CardModal.tsx  Dashboard.tsx  ExitModal.tsx  TagBadge.tsx  TagFilterModal.tsx  TagManagerModal.tsx  TiltCard.tsx  VaultHandler.tsx
electron/: main.js  preload.js
src/: App.tsx  i18n.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: BottomNav.tsx  CardModal.tsx  Dashboard.tsx  ExitModal.tsx  Generator.tsx  SecurityAudit.tsx  Sidebar.tsx  TagBadge.tsx  TagFilterModal.tsx  TagManagerModal.tsx  UnlockScreen.tsx
src/components/ui/: Drawer.tsx  FieldLabel.tsx  button.tsx  input.tsx
src/context/: VaultContext.tsx
src/services/: auditService.ts  crypto.ts  fileSystem.ts
utils/: cryptoUtils.ts  i18n.ts
