[package]
name = "mysterbox"
version = "0.1.0"
description = "MysterBox - Tauri desktop bundle"
edition = "2021"

[lib]
name = "mysterbox"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = []

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
panic = "abort"
strip = "symbols"
